crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_241_BxROM241_14_in_1_Russian_Study_Cartridge_R_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-241-BxROM241/14-in-1 Russian Study Cartridge (R).zip
rom_sha256=b59e227541933e80fdd5627471dc5b1004b79fb20df230e5dd35d7e98d323f9e
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=bb67d6a87a7762f5
checkpoint f900 fb_fnv1a64=4ebe09faed02785f
checkpoint f1100 fb_fnv1a64=86f8e5dbe32938e0
