crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_241_BxROM241_16_in_1_Chao_Ji_Shu_Biao_Jin_Ka_Ch_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-241-BxROM241/16-in-1 Chao Ji Shu Biao Jin Ka (Ch).zip
rom_sha256=9a15ce11afdcc811321a20175d279718dc30345a2b78b6da27b48fbf16935345
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=bc8514edaee5f3bc
checkpoint f900 fb_fnv1a64=3561c330fd502549
checkpoint f1100 fb_fnv1a64=3561c330fd502549
