crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_241_BxROM241_ASDER_PC_95_16_in_1_Arabic_Study_Cartridge_Asder_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-241-BxROM241/ASDER PC-95 (16-in-1) Arabic Study Cartridge (Asder).zip
rom_sha256=9bf1ab91bcc596861326184b17866cdc6aa9546208ebba5eba57d436ce396d9b
frames=1141
fb_bytes=245760
cycles=33949784
audio_samples=836505
audio_fnv1a64=9ce57c32808432c2
checkpoint f900 fb_fnv1a64=6a454fbea6b5c267
checkpoint f1100 fb_fnv1a64=18d770a633b6a095
