crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_241_BxROM241_Fan_Kong_Jing_Ying_Asia_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-241-BxROM241/Fan Kong Jing Ying (Asia) (Unl).zip
rom_sha256=93a0c4e73bdbf98a29d4137476b211ba1513d2576450d59dcbb0c1cf9fbc64b1
frames=1141
fb_bytes=245760
cycles=40428960
audio_samples=996152
audio_fnv1a64=7185fda91ac5df52
checkpoint f900 fb_fnv1a64=bd99a1cc69254039
checkpoint f1100 fb_fnv1a64=bd99a1cc69254039
