crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_242_Waixing43in1_Dragon_Quest_VIII_ES_1077_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-242-Waixing43in1/Dragon Quest VIII (ES-1077) (Ch) [!].nes
rom_sha256=fc7eec26cba95ec83fafb8c004871027c96f9cc3837fce26a4b15b09f6996a7e
frames=1141
fb_bytes=245760
cycles=33949780
audio_samples=836505
audio_fnv1a64=9adab24172369a68
checkpoint f900 fb_fnv1a64=be8024bb5d98169b
checkpoint f1100 fb_fnv1a64=be8024bb5d98169b
