crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_244_Decathlon_Asmik_kun_Land_J_t1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-244-Decathlon/Asmik-kun Land (J) [t1].nes
rom_sha256=039ccc715be6e7944aa3616b15633c380758e5d8cb77926f1ff3d24e91028a2d
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=59714f3ce8f096ba
checkpoint f900 fb_fnv1a64=f67e4ac206561585
checkpoint f1100 fb_fnv1a64=f3a95775d0a86f8c
